--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,17 +1,17 @@
 body {
-	/*padding: 50px;*/
-	font: 14px "Montserrat", Helvetica, Arial, sans-serif;
-	overflow-x: hidden;
+    /*padding: 50px;*/
+    font: 14px "Montserrat", Helvetica, Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 a {
-	color: #00B7FF;
+    color: #00B7FF;
 }
 
 h1,h2,h3,h4,h5,h6 {
-	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
-	font-weight: 700;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
 }
 button {
     border-radius: 0 !important;
@@ -27,28 +27,46 @@ table td {
 }
 
 @media (max-width: 500px) {
-	#tournament-info, .user-info {
-		font-size: smaller;
-	}
-	#tournaments {
-		word-break:break-all;
-	}
+    #tournament-info, .user-info {
+        font-size: smaller;
+    }
+    #tournaments {
+        word-break:break-all;
+    }
 }
 
 header {
-	text-align: center;
-	background-image: url('/images/33543411320_cbda5e86a9_k.png');
-	background-repeat: no-repeat;
+    text-align: center;
+    background-repeat: no-repeat;
     background-position: 36% 68%;
-	background-size: cover;
+    background-size: cover;
 }
+
+@media (max-width: 500px) {
+    header {
+        background-image: url('/images/33543411320_cbda5e86a9_k-720x480.png');
+    }
+}
+
+@media (min-width: 500px) and (max-width: 1024px) {
+    header {
+        background-image: url('/images/33543411320_cbda5e86a9_k-1024x682.png');
+    }
+}
+
+@media (min-width: 1025px) {
+    header {
+        background-image: url('/images/33543411320_cbda5e86a9_k-1600x1066.png');
+    }
+}
+
 header .container {
-	padding-top: 20px;
-	padding-bottom: 50px;
+    padding-top: 20px;
+    padding-bottom: 50px;
 }
 header img {
-	display: block;
-	margin: 0 auto 20px;
+    display: block;
+    margin: 0 auto 20px;
 }
 
 header .intro-text {
@@ -56,80 +74,80 @@ header .intro-text {
 }
 
 header .intro-text .name {
-	display: block;
-	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
-	font-weight: 700;
-	color: #FFF;
-	font-size: 2em;
+    display: block;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #FFF;
+    font-size: 2em;
     background: rgba(12,12,12,0.45);
 }
 header .intro-text .skills {
-	font-size: 1.25em;
-	font-weight: 300;
+    font-size: 1.25em;
+    font-weight: 300;
     color: white;
-	background-color: rgba(12,12,12,0.45);
+    background-color: rgba(12,12,12,0.45);
     padding-right: 7px;
     padding-left: 7px;
-	background-size: 1.40em;
+    background-size: 1.40em;
 }
 @media (min-width: 769px) {
 
-	header .intro-text .name {
+    header .intro-text .name {
         display:inline;
         padding-right: 15px;
         padding-left: 15px;
-		font-size: 4em;
-	}
-	header .intro-text .skills {
-		font-size: 1.75em;
-	}
+        font-size: 4em;
+    }
+    header .intro-text .skills {
+        font-size: 1.75em;
+    }
 }
 
 section {
-	padding: 30px 0;
+    padding: 30px 0;
 }
 section h2 {
-	margin: 0;
-	font-size: 3em;
+    margin: 0;
+    font-size: 3em;
 }
 
 hr.star-light, hr.star-user, hr.star-comments {
-	padding: 0;
-	border: none;
-	border-top: solid 5px;
-	text-align: center;
-	max-width: 250px;
-	margin: 25px auto 30px;
+    padding: 0;
+    border: none;
+    border-top: solid 5px;
+    text-align: center;
+    max-width: 250px;
+    margin: 25px auto 30px;
 }
 hr.star-user:after {
-	content: "\f007";
-	font-family: FontAwesome;
-	display: inline-block;
-	position: relative;
-	top: -0.8em;
-	font-size: 2em;
-	padding: 0 0.25em;
+    content: "\f007";
+    font-family: FontAwesome;
+    display: inline-block;
+    position: relative;
+    top: -0.8em;
+    font-size: 2em;
+    padding: 0 0.25em;
 }
 hr.star-comments:after {
-	content: "\f086";
-	font-family: FontAwesome;
-	display: inline-block;
-	position: relative;
-	top: -0.8em;
-	font-size: 2em;
-	padding: 0 0.25em;
+    content: "\f086";
+    font-family: FontAwesome;
+    display: inline-block;
+    position: relative;
+    top: -0.8em;
+    font-size: 2em;
+    padding: 0 0.25em;
 }
 hr.star-light, hr.star-user, hr.star-comments {
-	border-color: black;
+    border-color: black;
 }
 hr.star-light:after, hr.star-comments:after {
-	background-color: #FFF;
-	color: black;
+    background-color: #FFF;
+    color: black;
 }
 hr.star-user:after {
-	background-color: #F4FCFB;
-	color: black;
+    background-color: #F4FCFB;
+    color: black;
 }
 
 input {
@@ -154,27 +172,27 @@ textarea {
 
 #tournament-info {
     font-size: small;
-	text-align: center;
-	background: #FFF;
+    text-align: center;
+    background: #FFF;
 }
 #tournament-info .container {
-	padding-top: 20px;
-	padding-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .user-info {
-	text-align: center;
-	background: #F4FCFB;
+    text-align: center;
+    background: #F4FCFB;
 }
 
 .user-info .container {
-	padding-top: 20px;
-	padding-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .user-info .user-info-table {
-	font-size: 1.25em;
-	font-weight: 300;
+    font-size: 1.25em;
+    font-weight: 300;
 }
 
 .count {
@@ -186,18 +204,18 @@ textarea {
 }
 
 .bottom-content {
-	position: absolute;
-	bottom: 0;
+    position: absolute;
+    bottom: 0;
 }
 
 .image-cropper {
-	position: relative;
-	overflow: hidden;
-	width: 250px;
-	height: 250px;
-	margin: 0 auto;
-	border:4px solid gainsboro;
-	border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+    border:4px solid gainsboro;
+    border-radius: 50%;
     text-align: center;
 }
 
@@ -230,84 +248,84 @@ textarea {
 
 
 .image-cropper .img-hor {
-	position: absolute;
-	height: 100%;
-	width: auto;
-	cursor: pointer;
+    position: absolute;
+    height: 100%;
+    width: auto;
+    cursor: pointer;
 }
 
 .image-cropper .img-vert {
-	position: absolute;
-	height: auto;
-	width: 100%;
-	cursor: pointer;
+    position: absolute;
+    height: auto;
+    width: 100%;
+    cursor: pointer;
 }
 
 .wellpadding {
-	padding-top: 35px;
-	border:0px;
-	border-color: #74907C;
-	border-style: solid;
-	border-radius: 1%;
+    padding-top: 35px;
+    border:0px;
+    border-color: #74907C;
+    border-style: solid;
+    border-radius: 1%;
 }
 
 .details th {
-	min-width: 135px;
+    min-width: 135px;
 }
 .details td {
-	text-align: right;
+    text-align: right;
 }
 .left-align td, th {
-	text-align: left;
+    text-align: left;
 }
 
 .preventWrap {
-	white-space: nowrap;
+    white-space: nowrap;
 }
 
 .btnpadding {
-	margin-left: 20px;
+    margin-left: 20px;
 }
-.btnpadding_top {			
-	padding-top: 15px;
+.btnpadding_top {
+    padding-top: 15px;
 }
-.btnpadding_top2 {			
-	padding-top: 85px;
+.btnpadding_top2 {
+    padding-top: 85px;
 }
 
 .reg {
-	position: absolute;
-	right: 10px;
-	top: 0px;
-	padding: 10px;
+    position: absolute;
+    right: 10px;
+    top: 0px;
+    padding: 10px;
 }
 
 .edit {
-	position: absolute;
-	right: 10px;
-	top: 80px;
-	padding: 10px;
+    position: absolute;
+    right: 10px;
+    top: 80px;
+    padding: 10px;
 }
 
 .delete {
-	position: absolute;
-	right: 10px;
-	top: 120px;
-	padding: 10px;
+    position: absolute;
+    right: 10px;
+    top: 120px;
+    padding: 10px;
 }
 
 .image-upload img
 {
-	width: 80px;
-	cursor: pointer;
+    width: 80px;
+    cursor: pointer;
 }
 
 .animate {
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	-ms-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 /*+++++++++++++++++++++++++++++*/
@@ -319,10 +337,10 @@ textarea {
 }
 
 .nav-image {
-	height: 40px;
-	width: 40px;
-	border:0.1px solid gainsboro;
-	border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    border:0.1px solid gainsboro;
+    border-radius: 50%;
 }
 
 .nav-img {
@@ -331,44 +349,44 @@ textarea {
 }
 
 .nav-logo {
-	height: 40px;
-	width: 90px;
+    height: 40px;
+    width: 90px;
 }
 
 .navbar-left {
-	margin-right: 10px;
+    margin-right: 10px;
 }
 
 .dropdown-item {
-	font-size: larger;
-	padding: 10px;
+    font-size: larger;
+    padding: 10px;
 }
 @media (max-width: 992px) {
-	.dropdown-item {
-		font-size: inherit;
-		color: #999;
-	}
-	.dropdown-item:hover {
-		color: white;
-	}
+    .dropdown-item {
+        font-size: inherit;
+        color: #999;
+    }
+    .dropdown-item:hover {
+        color: white;
+    }
 
 }
 
 .verticalFlip {
-	-moz-transform: scale(-1, 1);
-	-webkit-transform: scale(-1, 1);
-	-o-transform: scale(-1, 1);
-	-ms-transform: scale(-1, 1);
-	transform: scale(-1, 1);
-	margin-left: -1px;
+    -moz-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+    transform: scale(-1, 1);
+    margin-left: -1px;
 
 }
 
 .totalDebt {
-	margin-left: 0;
+    margin-left: 0;
 }
 .personnelDebt {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 /*+++++++++++++++++++++++++++*/
@@ -376,19 +394,19 @@ textarea {
 /*+++++++++++++++++++++++++++*/
 
 @media (max-width: 768px) {
-	.btn-responsive {
-		padding:2px 4px;
-		font-size:80%;
-		line-height: 1;
-	}
+    .btn-responsive {
+        padding:2px 4px;
+        font-size:80%;
+        line-height: 1;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 992px) {
-	.btn-responsive {
-		padding:4px 9px;
-		font-size:90%;
-		line-height: 1.2;
-	}
+    .btn-responsive {
+        padding:4px 9px;
+        font-size:90%;
+        line-height: 1.2;
+    }
 }
 
 /*+++++++++++++++++++++++++++*/
@@ -397,44 +415,44 @@ textarea {
 
 /* line 1, ../../source/scss/ng-img-crop.scss */
 img-crop {
-	width: 100%;
-	height: 100%;
-	display: block;
-	position: relative;
-	overflow: hidden;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+    overflow: hidden;
 }
 /* line 7, ../../source/scss/ng-img-crop.scss */
 img-crop canvas {
-	display: block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	outline: none;
-	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-	/* mobile webkit */
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    outline: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    /* mobile webkit */
 }
 .cropArea {
-	background: #E4E4E4;
-	overflow: hidden;
-	width:500px;
-	height:350px;
+    background: #E4E4E4;
+    overflow: hidden;
+    width:500px;
+    height:350px;
 }
 form .progress {
-	line-height: 15px;
+    line-height: 15px;
 }
 .progress {
-	display: inline-block;
-	width: 100px;
-	border: 3px groove #CCC;
+    display: inline-block;
+    width: 100px;
+    border: 3px groove #CCC;
 }
 .progress div {
-	font-size: smaller;
-	background: orange;
-	width: 0;
+    font-size: smaller;
+    background: orange;
+    width: 0;
 }
 
 .file-upload .btn {
-	margin: 10px;
+    margin: 10px;
 }
 
 
@@ -443,89 +461,89 @@ form .progress {
 /*+++++++++++++++++++++++++++*/
 
 #myImg {
-	border-radius: 5px;
-	cursor: pointer;
-	transition: 0.3s;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 #myImg:hover {opacity: 0.7;}
 
 /* The Modal (background) */
 .modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
-	left: 0;
-	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
 
 /* Modal Content (image) */
 .modal-content {
-	margin: auto;
-	display: block;
-	width: 80%;
-	max-width: 700px;
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
 }
 
 /* Caption of Modal Image */
 #caption {
-	margin: auto;
-	display: block;
-	width: 80%;
-	max-width: 700px;
-	text-align: center;
-	color: #ccc;
-	padding: 10px 0;
-	height: 150px;
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
 }
 
 /* Add Animation */
 .modal-content, #caption {
-	-webkit-animation-name: zoom;
-	-webkit-animation-duration: 0.6s;
-	animation-name: zoom;
-	animation-duration: 0.6s;
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
 }
 
 @-webkit-keyframes zoom {
-	from {-webkit-transform:scale(0)}
-	to {-webkit-transform:scale(1)}
+    from {-webkit-transform:scale(0)}
+    to {-webkit-transform:scale(1)}
 }
 
 @keyframes zoom {
-	from {transform:scale(0)}
-	to {transform:scale(1)}
+    from {transform:scale(0)}
+    to {transform:scale(1)}
 }
 
 /* The Close Button */
 .close {
-	position: absolute;
-	top: 15px;
-	right: 35px;
-	color: #f1f1f1;
-	font-size: 40px;
-	font-weight: bold;
-	transition: 0.3s;
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
 }
 
 .close:hover,
 .close:focus {
-	color: #bbb;
-	text-decoration: none;
-	cursor: pointer;
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
-	.modal-content {
-		width: 100%;
-	}
+    .modal-content {
+        width: 100%;
+    }
 }
 
 
@@ -534,75 +552,75 @@ form .progress {
 /*+++++++++++++++++++++++++++*/
 
 #snackbarSuccess {
-	visibility: hidden;
-	min-width: 250px;
-	margin-left: -125px;
-	background-color: #DFF0D8;
-	color: #3C763D;
-	text-align: center;
-	border-radius: 28px;
-	border: 2px solid #3C763D;
-	padding-left: 26px;
-	padding-right: 26px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	position: fixed;
-	z-index: 1;
-	left: 45%;
-	bottom: 30px;
-	font-size: 25px;
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #DFF0D8;
+    color: #3C763D;
+    text-align: center;
+    border-radius: 28px;
+    border: 2px solid #3C763D;
+    padding-left: 26px;
+    padding-right: 26px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: fixed;
+    z-index: 1;
+    left: 45%;
+    bottom: 30px;
+    font-size: 25px;
 }
 
 #snackbarError {
-	visibility: hidden;
-	min-width: 250px;
-	margin-left: -125px;
-	background-color: #F2DEDE;
-	color: #B84442;
-	text-align: center;
-	border-radius: 28px;
-	border: 2px solid #B84442;
-	padding-left: 26px;
-	padding-right: 26px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	position: fixed;
-	z-index: 1;
-	left: 40%;
-	bottom: 30px;
-	font-size: 25px;
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #F2DEDE;
+    color: #B84442;
+    text-align: center;
+    border-radius: 28px;
+    border: 2px solid #B84442;
+    padding-left: 26px;
+    padding-right: 26px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: fixed;
+    z-index: 1;
+    left: 40%;
+    bottom: 30px;
+    font-size: 25px;
 }
 
 #snackbarSuccess.show {
-	visibility: visible;
-	-webkit-animation: fadein 0.5s, fadeout 0.5s 3.5s;
-	animation: fadein 0.5s, fadeout 0.5s 3.5s;
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 3.5s;
+    animation: fadein 0.5s, fadeout 0.5s 3.5s;
 }
 
 #snackbarError.show {
-	visibility: visible;
-	-webkit-animation: fadein 0.5s, fadeout 0.5s 3.5s;
-	animation: fadein 0.5s, fadeout 0.5s 3.5s;
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 3.5s;
+    animation: fadein 0.5s, fadeout 0.5s 3.5s;
 }
 
 @-webkit-keyframes fadein {
-	from {bottom: 0; opacity: 0;}
-	to {bottom: 30px; opacity: 1;}
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
 }
 
 @keyframes fadein {
-	from {bottom: 0; opacity: 0;}
-	to {bottom: 30px; opacity: 1;}
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
 }
 
 @-webkit-keyframes fadeout {
-	from {bottom: 30px; opacity: 1;}
-	to {bottom: 0; opacity: 0;}
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
 }
 
 @keyframes fadeout {
-	from {bottom: 30px; opacity: 1;}
-	to {bottom: 0; opacity: 0;}
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
 }
 
 /*FOOTER*/
@@ -642,19 +660,19 @@ footer {
 
 /* right-align monetary amounts */
 .currencySign[data-monetary-amount] {
-	text-align: right;
-	white-space: nowrap;
+    text-align: right;
+    white-space: nowrap;
 }
 
 /* make the cells output their value */
 .currencySign[data-monetary-amount]:after {
-	content: attr(data-monetary-amount);
-	color: #2ab269;
+    content: attr(data-monetary-amount);
+    color: #2ab269;
 }
 
 /* make debit amounts show up in red */
 .currencySign[data-monetary-amount^="-"]:after {
-	color: #db2a28;
+    color: #db2a28;
 }
 
 
