--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,10 +21,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-resource.min.js"></script>
 
+    <!--Angular-Confirm-->
+    <script src="/javascripts/angular-confirm-master/dist/angular-confirm.min.js"></script>
+    <link rel="stylesheet" href="javascripts/angular-confirm-master/dist/angular-confirm.min.css">
+
     <!-- ngDialog -->
     <script src="/javascripts/ng-dialog/js/ngDialog.js"></script>
-    <link rel="stylesheet" href="/javascripts/ng-dialog/css/ngDialog.min.css">
-    <link rel="stylesheet" href="/javascripts/ng-dialog/css/ngDialog-theme-default.min.css">
+    <link rel="stylesheet" href="javascripts/ng-dialog/css/ngDialog.min.css">
+    <link rel="stylesheet" href="javascripts/ng-dialog/css/ngDialog-theme-default.min.css">
 
     <!-- ng-file-upload -->
     <script src="/javascripts/ng-file-upload/ng-file-upload-shim.min.js"></script>
@@ -34,7 +38,7 @@
     <script src="/javascripts/ng-img-crop/js/ng-img-crop.js"></script>
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="/stylesheets/bootstrap/4.0.0-alpha.6/css/bootstrap.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheets/bootstrap/4.0.0-alpha.6/css/bootstrap.css" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
@@ -43,7 +47,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!--css-loader-->
-    <link rel="stylesheet" href="/stylesheets/loader.css" />
+    <link rel="stylesheet" href="stylesheets/loader.css" />
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500" rel="stylesheet">
 
