--- a/views/index.ejs
+++ b/views/index.ejs
@@ -153,11 +153,11 @@
 <!-- LINK TO BUG REPORT PAGE -->
 <footer class="footer">
     <div class="row">
-        <div class="col hidden-sm-down">
+        <div class="col hidden-md-down">
             © Berlin Debating Union e.V., 2017
         </div>
         <div class="col">
-            <a href="/#/bugReport">Report a Problem</a>
+            <a href="/#/bugReport">Report a Problem<span class="hidden-md-down"> / Give feedback</span></a>
         </div>
         <div class="col photo-credit">
             photo credit: <a target="_blank" href="https://www.flickr.com/photos/jaehyunlee/">Jaehyun Lee</a>, <a target="_blank" href="https://www.flickr.com/photos/jaehyunlee/33543411320/">"Museum Island"</a> is licensed under <a target="_blank" href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>
